welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:5: error: ';' expected but 'return' found.
	}return false{
         ^